--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: rgba(160,166,171,0.1);
 }
 
 h1 {
@@ -27,7 +28,7 @@ h1 {
 }
 @keyframes typewriter{
   from{width: 0;}
-  to{width: 17.5em;}
+  to{width: 20em;}
 }
 @keyframes blinkTextCursor{
   from{border-right-color: rgba(255,255,255,.75);}
