fix service worker redirect, add bootcamps hero, feedback modal WIP

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background-color: rgba(160,166,171,0.1);
 }
 
